--- a/src/app/pages/nopagefound/nopagefound.component.html
+++ b/src/app/pages/nopagefound/nopagefound.component.html
@@ -1,1 +1,5 @@
-<p>nopagefound works!</p>
+<div class="not-found">
+  <h1>No existe esta página</h1>
+  <p>La página que estás buscando no existe o ha sido eliminada.</p>
+  <button (click)="volverAtras()">Volver Atrás</button>
+</div>
